<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ironkitchen.ironkitchenmob.ik_view.HomeTabActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:theme="@style/AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/brickWall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/brick_wall"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="@+id/appbar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/appbar"
        app:layout_constraintTop_toTopOf="@+id/appbar" />

    <AdapterViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/brickWall"
        app:layout_constraintEnd_toEndOf="@+id/brickWall"
        app:layout_constraintStart_toEndOf="@+id/symbolLogo"
        app:layout_constraintTop_toTopOf="@+id/brickWall">

    </AdapterViewFlipper>

    <ImageView
        android:id="@+id/symbolLogo"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/symbol_img"
        app:layout_constraintBottom_toBottomOf="@+id/brickWall"
        app:layout_constraintEnd_toStartOf="@+id/viewFlipper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/brickWall"
        app:layout_constraintTop_toTopOf="@+id/brickWall" />

    <TextView
        android:id="@+id/mealPrep"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_bar_meal_prep"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pickUp"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="@+id/symbolLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/symbolLogo"
        app:layout_constraintEnd_toStartOf="@+id/lunch"
        app:layout_constraintStart_toEndOf="@+id/mealPrep"
        app:layout_constraintTop_toBottomOf="@id/mealPrep" />

    <TextView
        android:id="@+id/lunch"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_bar_lunch"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lunchDayz"
        app:layout_constraintEnd_toEndOf="@+id/symbolLogo"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pickUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/title_bar_pick_up"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sundayPickup"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/symbolLogo"
        app:layout_constraintTop_toBottomOf="@+id/mealPrep" />

    <TextView
        android:id="@+id/sundayPickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/title_bar_sunday"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pickUpTime"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/symbolLogo"
        app:layout_constraintTop_toBottomOf="@+id/pickUp" />

    <TextView
        android:id="@+id/pickUpTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:text="@string/title_bar_mp_time"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wedPickUp"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/symbolLogo"
        app:layout_constraintTop_toBottomOf="@+id/sundayPickup" />

    <TextView
        android:id="@+id/wedPickUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_bar_wed"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pickUpTime2"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/symbolLogo"
        app:layout_constraintTop_toBottomOf="@+id/pickUpTime" />

    <TextView
        android:id="@+id/pickUpTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/title_bar_mp_time"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/symbolLogo"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/symbolLogo"
        app:layout_constraintTop_toBottomOf="@+id/wedPickUp" />

    <TextView
        android:id="@+id/lunchDayz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_bar_lunch_dayz"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lunchTime"
        app:layout_constraintEnd_toEndOf="@+id/symbolLogo"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/lunch" />

    <TextView
        android:id="@+id/lunchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/title_bar_lunch_time"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lunchSunday"
        app:layout_constraintEnd_toEndOf="@+id/symbolLogo"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/lunchDayz" />

    <TextView
        android:id="@+id/lunchSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_bar_sunday"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lunchClosed"
        app:layout_constraintEnd_toEndOf="@+id/symbolLogo"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/lunchTime" />

    <TextView
        android:id="@+id/lunchClosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/title_bar_close"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/symbolLogo"
        app:layout_constraintEnd_toEndOf="@+id/symbolLogo"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/lunchSunday" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:background="#99000000"
        app:layout_constraintBottom_toBottomOf="@+id/appbar"
        app:layout_constraintTop_toBottomOf="@+id/brickWall"
        app:layout_constraintStart_toStartOf="@+id/appbar"
        app:layout_constraintEnd_toEndOf="@+id/appbar">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homw_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch_tab" />
    </android.support.design.widget.TabLayout>

    <androidx.core.view.ViewPager
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

</androidx.constraintlayout.ConstraintLayout>
